Fix layout issue with error messages and color dropdown in AppointmentDialog

--- a/src/app/dialogs/appointment-dialog/appointment-dialog.component.scss
+++ b/src/app/dialogs/appointment-dialog/appointment-dialog.component.scss
@@ -1,8 +1,11 @@
 .name-color-container {
 	display: flex;
-	align-items: flex-end;
 	justify-content: center;
 	gap: 8px;
+}
+
+.color-dropdown-container {
+	margin-top: 25px;
 }
 
 .date-container {
