--- a/src/app/pages/appointments-page/appointments-page.component.scss
+++ b/src/app/pages/appointments-page/appointments-page.component.scss
@@ -24,7 +24,7 @@ dav-header {
 	display: flex;
 	flex-direction: column;
 	width: 80%;
-	max-width: 300px;
+	max-width: 350px;
 }
 
 .appointment-day-items {
